# xous-core

./: .envrc  .guix-channel  channels-codeberg.scm  channels.scm  flake.nix
.github/workflows/: docker.yml  guix.yml  nix.yml
apps-dabao/: Dockerfile
bao1x-boot/: Dockerfile
bao1x-boot/boot1/src/: repl.rs
guix/: bao.scm  betrusted-io-dependencies-summary.md  guix-vs-nix-cargo-comparison.md  motivation.md  secure-rust-vendoring-guix-v2.md  xous-core.scm  xous-crates.scm
scripts/verify_ed25519ph/: Cargo.toml  README.md
scripts/verify_ed25519ph/src/: main.rs
