[package]
name = "verify_ed25519ph"
version = "0.1.0"
edition = "2021"
description = "Ed25519ph signature verification tool for Baochip attestation"

# Keep this package out of the xous-core workspace
[workspace]

[profile.release]
strip = true
lto = true

# Build inside guix shell with:
#   RUSTFLAGS="-C link-args=-Wl,-rpath,$(dirname $(gcc -print-file-name=libgcc_s.so.1))" cargo build --release
# This embeds the libgcc_s.so.1 path in the binary.

[dependencies]
ed25519-dalek = { version = "2", features = ["digest"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
digest = "0.10"
